--- a/colorGame.html
+++ b/colorGame.html
@@ -12,6 +12,15 @@
   </head>
   <body>
 
+    <h1>The Great <span id="colorDisplay">RGB</span> Color Game</h1>
+
+    <div id="stripe" class="">
+      <button id="reset" type="button" name="button">New Colors</button>
+      <span id="message"></span>
+      <button id="easyBtn" type="button" name="button">Easy</button>
+      <button id="hardBtn" class="selected" type="button" name="button">Hard</button>
+    </div>
+
     <div id="container">
       <div class="square"></div>
       <div class="square"></div>
